--- a/user_management/requirements.txt
+++ b/user_management/requirements.txt
@@ -21,6 +21,7 @@ flake8-broken-line==1.0.0
 flake8-isort==6.1.1
 flake8-plugin-utils==1.3.3
 flake8-return==1.2.0
+gunicorn==22.0.0
 identify==2.6.0
 idna==3.7
 inflection==0.5.1
@@ -36,6 +37,7 @@ pathspec==0.12.1
 pep8-naming==0.14.1
 platformdirs==4.2.2
 pre-commit==3.7.1
+psycopg2-binary==2.9.9
 pycodestyle==2.12.0
 pycparser==2.22
 pyflakes==3.2.0
